## 3.2.0

- New: Product pictures on stock overview list and master products list (#536)
- New: Grid layout for recipes list
- New: Many pages of the app now can be opened using NFC tags with URI (thanks @codesalatdev) (#676)
- Improved: In-app help now contains a list of the supported URIs that can be used for Intents
- Improved: Menu button in bottom app bar now can be hidden in behavior settings
- Improved: Scrollbar is shown in scrollable lists
- Improved: Better logic on login page for receiving Home Assistant session token (#670)
- Improved: Logging on login page for Home Assistant connection (#670)
- Improved: Moved shortcuts option from behavior to appearance settings
- Improved: Added option for quick mode state when using scan button on overview page (#540, #648)
- Improved: Added separate buttons for shopping mode and new task to overview start page
- Fixed: Home Assistant offline error (#670)
- Fixed: On login pages all barcode formats were allowed, now only QR code format is recognized
- Fixed: Deprecated Google Play developer profile link

## 3.1.1

- Fixed: Home Assistant core update broke session authentication, this fix can be a bit buggy (#670)
- Fixed: Crashes where parsing a wrong formatted floating point number was the reason (#652)

## 3.1.0

- New: Fulfillment check for every ingredient on recipe page
- New: Total price displayed on shopping list bottom (#645)
- New: Stock overview page has new status filter "not fresh" for combined results (#661)
- New: "Should not be frozen" toggle on master product page and warn user if appropriate (#638)
- New: Inventory form can now be used to link unknown barcode to product without any action (#605)
- Improved: Finally the floating action button stays visible when the keyboard is shown (#405)
- Improved: Bottom bar not above keyboard anymore
- Improved: Prevent status messages from covering elements like floating action button or bottom bar
- Improved: Animated menu icons in bottom bar when navigating