@@ -1,5 +1,6 @@
 ## 3.2.0
 
+- New: Catalan, Estonian and Portuguese (Brazil) translations. Many thanks for your contributions!
 - New: Product pictures on stock overview list and master products list (#536)
 - New: Grid layout for recipes list
 - New: Many pages of the app now can be opened using NFC tags with URI (thanks @codesalatdev) (#676)
@@ -11,6 +12,7 @@
 - Improved: Moved shortcuts option from behavior to appearance settings
 - Improved: Added option for quick mode state when using scan button on overview page (#540, #648)
 - Improved: Added separate buttons for shopping mode and new task to overview start page
+- Improved: Updated plural rules for quantity units in all project languages from Transifex
 - Fixed: Home Assistant offline error (#670)
 - Fixed: On login pages all barcode formats were allowed, now only QR code format is recognized
 - Fixed: Deprecated Google Play developer profile link
